<resources>
    <string name="app_name">PB_mh_jmcd</string>

    <string name="title_section1">Home</string>
    <string name="title_section2">About Us</string>
    <string name="title_section3">Settings</string>
    <string name="title_section4">Logout</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="acknowledge">Acknowledgements</string>



    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_to_login">Back</string>
    <string name="btn_to_register">Register Here</string>
    <string name="btn_to_about">Back</string>

    <string name="txt_username">Username:</string>
    <string name="txt_email">Email Address:</string>
    <string name="txt_password">Password:</string>




    <string name="logout_title">Logout</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="logout_yes">Yes</string>
    <string name="logout_no">No</string>

</resources>
