<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/fragment_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >
        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_matappicon"
            android:layout_gravity="center"
            android:focusable="false" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/txt_username"
            android:textColor="@color/text_login_register"
            android:textSize="20dp"
            android:padding="10dp"

            />

        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:textColor="@color/text_login_register"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/txt_email"
            android:textSize="20dp"
            android:padding="10dp"
            android:id="@+id/textView7"
            android:textColor="@color/text_login_register"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"

            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/text_login_register"
            />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/txt_password"
            android:textColor="@color/text_login_register"
            android:textSize="20dp"
            android:padding="10dp"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:textColor="@color/text_login_register"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"

            />



        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/btn_register"
            android:textColor="@color/white"
            android:background="@drawable/loginregister_button"
             />



        <Button
            android:id="@+id/btnToLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="@string/btn_to_login"
            android:textColor="@color/white"
            android:background="@drawable/loginregister_button"
             />
    </LinearLayout>

</LinearLayout>